2025-09-08T01:20:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17536819616 # 760
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-08
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1086 1566 / 1099 1579
* notice: next accum: outdated-unq outdated-all / unq all: 1086 1566 / 1100 1580
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-25 2025-09-07]

2025-09-07T01:21:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17521985541 # 759
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-07
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1085 1565 / 1098 1578
* notice: next accum: outdated-unq outdated-all / unq all: 1086 1566 / 1099 1579
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-24] / [2025-09-06]

2025-09-06T01:13:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17507960529 # 758
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-06
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1084 1564 / 1097 1577
* notice: next accum: outdated-unq outdated-all / unq all: 1085 1565 / 1098 1578
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-23] / [2025-09-05]

2025-09-05T01:16:05Z: