@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-08T01:20:01Z",
-  "count_outdated" : 1566,
-  "uniques_outdated" : 1086,
+  "timestamp" : "2025-09-09T01:17:18Z",
+  "count_outdated" : 1568,
+  "uniques_outdated" : 1088,
   "count" : 1580,
   "uniques" : 1100,
   "clones" : [
-    {
-      "timestamp": "2025-08-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-08-27T00:00:00Z",
       "count": 1,
