@@ -1,12 +1,7 @@
 {
-  "count": 13,
-  "uniques": 6,
+  "count": 12,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-08-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-27T00:00:00Z",
       "count": 1,
