@@ -1,3 +1,12 @@
+2025-09-09T01:17:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17568775930 # 761
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-09
+* notice: last 14d: unq all: 5 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 1086 1566 / 1100 1580
+* notice: next accum: outdated-unq outdated-all / unq all: 1088 1568 / 1100 1580
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-08-25] / []
+
 2025-09-08T01:20:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17536819616 # 760
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-08
